--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ Optimisers = "0.2.12"
 ProgressLogging = "0.1"
 Reexport = "0.2, 1.0"
 SpecialFunctions = "1.8.2, 2.1.2"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 Zygote = "0.6.49"
 julia = "1.6"
 
